[gd_scene load_steps=15 format=3 uid="uid://dmk782g48av4s"]

[ext_resource type="Texture2D" uid="uid://10mgmjx7fwya" path="res://Zun_bg.png" id="1_gbjsq"]
[ext_resource type="Script" uid="uid://bd66cx0f4dxp1" path="res://scenes/poste_battle.gd" id="1_lti2f"]
[ext_resource type="PackedScene" uid="uid://dxnw2d4wwdegc" path="res://vfx/atmosphere.tscn" id="2_lti2f"]
[ext_resource type="Texture2D" uid="uid://dn7lvslkn2b43" path="res://UI/fightUI.png" id="3_lof1b"]
[ext_resource type="FontFile" uid="uid://dbsxp2y5aoq5q" path="res://carolingia.ttf" id="4_hcjl0"]
[ext_resource type="Texture2D" uid="uid://c2cptlhr6pvg5" path="res://actions/actiontexture/axe.png" id="5_l6rhe"]
[ext_resource type="Script" uid="uid://bbfc4ul2bo0en" path="res://UI/actionButton.gd" id="6_ex07t"]
[ext_resource type="FontFile" uid="uid://dnslgqwusbs67" path="res://UI/Euphorigenic.otf" id="7_u6ara"]
[ext_resource type="Script" uid="uid://igdjgbcqg1d6" path="res://UI/PositionSlot.gd" id="9_hcjl0"]
[ext_resource type="Script" uid="uid://b3l4l88c3b65c" path="res://PositionData.gd" id="10_l6rhe"]

[sub_resource type="Resource" id="Resource_ex07t"]
script = ExtResource("10_l6rhe")
index = 0
scale = Vector2(1, 1)
is_enemy = false
metadata/_custom_type_script = "uid://b3l4l88c3b65c"

[sub_resource type="Resource" id="Resource_u6ara"]
script = ExtResource("10_l6rhe")
index = 1
scale = Vector2(0.9, 0.9)
is_enemy = false
metadata/_custom_type_script = "uid://b3l4l88c3b65c"

[sub_resource type="Resource" id="Resource_7l7af"]
script = ExtResource("10_l6rhe")
index = 3
scale = Vector2(0.9, 0.9)
is_enemy = false
metadata/_custom_type_script = "uid://b3l4l88c3b65c"

[sub_resource type="Resource" id="Resource_afuou"]
script = ExtResource("10_l6rhe")
index = 2
scale = Vector2(1, 1)
is_enemy = false
metadata/_custom_type_script = "uid://b3l4l88c3b65c"

[node name="posteBattle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lti2f")

[node name="ZunBg" type="Sprite2D" parent="."]
position = Vector2(961, 402)
texture = ExtResource("1_gbjsq")

[node name="atmosphere" parent="." instance=ExtResource("2_lti2f")]
position = Vector2(1885, 352)

[node name="FightUi" type="Sprite2D" parent="."]
position = Vector2(960, 545)
texture = ExtResource("3_lof1b")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 681.0
offset_top = 974.0
offset_right = 1265.0
offset_bottom = 975.0
color = Color(0.501961, 0.407843, 0.207843, 1)

[node name="ActionPanel" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(90, 90)
layout_mode = 0
offset_left = 579.0
offset_top = 845.0
offset_right = 1202.0
offset_bottom = 945.0
scale = Vector2(1.245, 1.245)
theme_override_constants/separation = 10
alignment = 1

[node name="Action1" type="Button" parent="ActionPanel"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_fonts/font = ExtResource("4_hcjl0")
theme_override_font_sizes/font_size = 40
icon = ExtResource("5_l6rhe")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("6_ex07t")

[node name="cooldownA" type="Label" parent="ActionPanel/Action1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Action2" type="Button" parent="ActionPanel"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_fonts/font = ExtResource("4_hcjl0")
theme_override_font_sizes/font_size = 40
icon = ExtResource("5_l6rhe")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("6_ex07t")

[node name="cooldownA" type="Label" parent="ActionPanel/Action2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Action3" type="Button" parent="ActionPanel"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_fonts/font = ExtResource("4_hcjl0")
theme_override_font_sizes/font_size = 40
icon = ExtResource("5_l6rhe")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("6_ex07t")

[node name="cooldownA" type="Label" parent="ActionPanel/Action3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Action4" type="Button" parent="ActionPanel"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_fonts/font = ExtResource("4_hcjl0")
theme_override_font_sizes/font_size = 40
icon = ExtResource("5_l6rhe")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("6_ex07t")

[node name="cooldownA" type="Label" parent="ActionPanel/Action4"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Action5" type="Button" parent="ActionPanel"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_fonts/font = ExtResource("4_hcjl0")
theme_override_font_sizes/font_size = 40
icon = ExtResource("5_l6rhe")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("6_ex07t")

[node name="cooldownA" type="Label" parent="ActionPanel/Action5"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="LabelAction" type="Label" parent="."]
layout_mode = 0
offset_left = 681.0
offset_top = 982.0
offset_right = 1260.0
offset_bottom = 1066.0
theme_override_fonts/font = ExtResource("7_u6ara")
theme_override_font_sizes/font_size = 25
text = "Attaque1 
et truc et bidule"
horizontal_alignment = 1
autowrap_mode = 3

[node name="TurnOrderPanel" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 28.0
offset_right = 1921.0
offset_bottom = 93.0
mouse_filter = 2
alignment = 1

[node name="Charaname" type="Label" parent="."]
layout_mode = 0
offset_left = 204.0
offset_top = 821.0
offset_right = 848.0
offset_bottom = 901.0
theme_override_font_sizes/font_size = 40
text = "Hero Name"

[node name="contexte" type="Label" parent="."]
layout_mode = 0
offset_left = 1503.0
offset_top = 846.0
offset_right = 1813.0
offset_bottom = 1008.0
theme_override_font_sizes/font_size = 40
text = "ce qu'il se passe"
autowrap_mode = 3

[node name="HeroPosition" type="Node2D" parent="."]
position = Vector2(151, 642)

[node name="position1" type="Node2D" parent="HeroPosition"]
position = Vector2(0, 28)
script = ExtResource("9_hcjl0")
position_data = SubResource("Resource_ex07t")

[node name="TextureRect" type="TextureRect" parent="HeroPosition/position1"]
visible = false
offset_left = -47.0
offset_top = -334.0
offset_right = 19.0
offset_bottom = -274.0
mouse_filter = 2
texture = ExtResource("5_l6rhe")

[node name="Button" type="Button" parent="HeroPosition/position1"]
offset_left = -92.0
offset_top = -304.0
offset_right = 78.0
offset_bottom = 11.0
flat = true

[node name="position2" type="Node2D" parent="HeroPosition"]
position = Vector2(173, -13)
script = ExtResource("9_hcjl0")
position_data = SubResource("Resource_u6ara")

[node name="TextureRect" type="TextureRect" parent="HeroPosition/position2"]
visible = false
offset_left = -47.0
offset_top = -334.0
offset_right = 19.0
offset_bottom = -274.0
texture = ExtResource("5_l6rhe")

[node name="Button" type="Button" parent="HeroPosition/position2"]
offset_left = -92.0
offset_top = -304.0
offset_right = 78.0
offset_bottom = 11.0
flat = true

[node name="position4" type="Node2D" parent="HeroPosition"]
position = Vector2(537, -13)
script = ExtResource("9_hcjl0")
position_data = SubResource("Resource_7l7af")

[node name="TextureRect" type="TextureRect" parent="HeroPosition/position4"]
visible = false
offset_left = -47.0
offset_top = -334.0
offset_right = 19.0
offset_bottom = -274.0
texture = ExtResource("5_l6rhe")

[node name="Button" type="Button" parent="HeroPosition/position4"]
offset_left = -92.0
offset_top = -304.0
offset_right = 78.0
offset_bottom = 11.0
flat = true

[node name="position3" type="Node2D" parent="HeroPosition"]
position = Vector2(355, 27)
script = ExtResource("9_hcjl0")
position_data = SubResource("Resource_afuou")

[node name="TextureRect" type="TextureRect" parent="HeroPosition/position3"]
visible = false
offset_left = -47.0
offset_top = -334.0
offset_right = 19.0
offset_bottom = -274.0
texture = ExtResource("5_l6rhe")

[node name="Button" type="Button" parent="HeroPosition/position3"]
offset_left = -92.0
offset_top = -304.0
offset_right = 78.0
offset_bottom = 11.0
flat = true

[connection signal="mouse_entered" from="ActionPanel/Action1" to="ActionPanel/Action1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ActionPanel/Action1" to="ActionPanel/Action1" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="ActionPanel/Action2" to="ActionPanel/Action2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ActionPanel/Action2" to="ActionPanel/Action2" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="ActionPanel/Action3" to="ActionPanel/Action3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ActionPanel/Action3" to="ActionPanel/Action3" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="ActionPanel/Action4" to="ActionPanel/Action4" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ActionPanel/Action4" to="ActionPanel/Action4" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="ActionPanel/Action5" to="ActionPanel/Action5" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ActionPanel/Action5" to="ActionPanel/Action5" method="_on_mouse_exited"]
[connection signal="button_down" from="HeroPosition/position1/Button" to="HeroPosition/position1" method="_on_button_button_down"]
[connection signal="mouse_entered" from="HeroPosition/position1/Button" to="HeroPosition/position1" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="HeroPosition/position1/Button" to="HeroPosition/position1" method="_on_button_mouse_exited"]
[connection signal="button_down" from="HeroPosition/position2/Button" to="HeroPosition/position2" method="_on_button_button_down"]
[connection signal="mouse_entered" from="HeroPosition/position2/Button" to="HeroPosition/position2" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="HeroPosition/position2/Button" to="HeroPosition/position2" method="_on_button_mouse_exited"]
[connection signal="button_down" from="HeroPosition/position4/Button" to="HeroPosition/position4" method="_on_button_button_down"]
[connection signal="mouse_entered" from="HeroPosition/position4/Button" to="HeroPosition/position4" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="HeroPosition/position4/Button" to="HeroPosition/position4" method="_on_button_mouse_exited"]
[connection signal="button_down" from="HeroPosition/position3/Button" to="HeroPosition/position3" method="_on_button_button_down"]
[connection signal="mouse_entered" from="HeroPosition/position3/Button" to="HeroPosition/position3" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="HeroPosition/position3/Button" to="HeroPosition/position3" method="_on_button_mouse_exited"]
